# script_forge

./: .gitignore  README.md  __init__.py  cvat_tools.py  extract_line_number.py  find_box.py  image_loader.py  pyproject.toml  requirements.txt  s3_tools.py  s3_utils.py  zipmanager.py
kh/: kh_link.py  kh_tools.py
obj_detect/: yolo.py
ocr/: gradio_clients.py
s3/: s3_gui.py  s3_tools.py
utils/: cvat_tools.py  fmr_generation.py  schemas_loader.py  zipmanager.py
utils/kh/: kh2_upload_example_misc.py  kh_documents_uploader_service.py
utils/ocr/: gradio_clients.py
utils/s3/: gui.py  s3_tools.py
