[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "script-forge"
version = "0.1.2"
authors = [
    { name = "Albert Bogdan", email = "albert.bohdan@azati.com" },
]
description = "Useful utils"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aioboto3>=13.4.0",
    "cvat-sdk>=2.30.0",
    "more-itertools>=10.6.0",
    "rich>=13.9.4",
    "sahi>=0.11.20",
    "ultralytics>=8.3.75",
]

[tool.setuptools.package-dir]
script_forge = "utils"

[tool.setuptools.packages.find]
where = ["utils"]
